--- a/server/client/src/components/App.css
+++ b/server/client/src/components/App.css
@@ -4,14 +4,13 @@
   text-align: center;
   /* background: rgb(255,255,255);
   background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,201,0,1) 100%); */
-  min-height: 100vh;
-  background: rgb(150, 150, 150);
   font-family: 'Roboto Condensed', sans-serif;
   color: white;
 }
 
 section {
   text-align: center;
+  background-color: #1b1e1d;
 }
 
 section h1 {
