--- a/server/client/src/routes/Teams/Teams.css
+++ b/server/client/src/routes/Teams/Teams.css
@@ -1,15 +1,53 @@
+/* #teamsGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px; 
+  padding: 0 5%; 
+}
+@media (max-width: 768px) {
+  #teamsGrid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
+    padding: 0 3%; 
+    justify-content: center;
+    align-items: center;
+  }
+} */
+
+.main-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    min-height: 100vh;
+    max-width: 100vw;
+    background-color: #1b1e1d;
+}
+
+.sub-section {
+  margin-top: 20px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  justify-content: center;
+}
+
+
 #teamsGrid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Crea columnas que se ajustan automáticamente */
-    gap: 20px; /* Espacio entre elementos */
-    padding: 0 5%; /* Márgenes horizontales */
-  }
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center; 
+    gap: 20px; 
+}
   
-  /* Media query para ajustar el número de columnas en tamaños de pantalla más pequeños */
-  @media (max-width: 768px) {
+/* Media query para ajustar el diseño en tamaños de pantalla más pequeños */
+@media (max-width: 768px) {
     #teamsGrid {
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Cambia el tamaño mínimo de las columnas para dispositivos más pequeños */
-      padding: 0 3%; /* Ajusta los márgenes horizontales */
+      justify-content: center;
     }
-  }
+}
   
